Fix long filenames overflowing file table layout
Use table-layout: fixed with text-overflow: ellipsis on the Name
column so encrypted filenames truncate instead of pushing action
buttons off-screen. Add title attributes for full-name tooltip.

--- a/UI/wwwroot/css/app.css
+++ b/UI/wwwroot/css/app.css
@@ -7,3 +7,35 @@
 .main-content {
     width: 100%;
 }
+
+.file-table {
+    table-layout: fixed;
+    width: 100%;
+}
+
+.file-table th.col-name,
+.file-table td.col-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.file-table th.col-size,
+.file-table td.col-size {
+    width: 80px;
+}
+
+.file-table th.col-type,
+.file-table td.col-type {
+    width: 100px;
+}
+
+.file-table th.col-modified,
+.file-table td.col-modified {
+    width: 130px;
+}
+
+.file-table th.col-actions,
+.file-table td.col-actions {
+    width: 110px;
+}
